Fixed Card Grid overflowing

--- a/frontEnd/src/Components/Cards/CardRentalGrid.scss
+++ b/frontEnd/src/Components/Cards/CardRentalGrid.scss
@@ -1,14 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
-body p {
-    margin-top: 0;
-}
-
 .card-container {
     display: flex;
     justify-content: center;
